# SecureExecutor

./: .gitignore  LICENSE  README.md  SecureExecutor
.github/workflows/: linter.yml  secure-executor-tests.yml
Dockerfiles/: cpp-build.Dockerfile  cpp-dynamic.Dockerfile  cpp-static.Dockerfile  python3.Dockerfile  rust.Dockerfile
Dockerfiles/apps/: depix.Dockerfile  edgeless-node.Dockerfile  edgeless-python-function.Dockerfile  edgeless-rust-function.Dockerfile  edgeless-system.Dockerfile  steganography.Dockerfile
Dockerfiles/apps-base-images/: cpp-base.Dockerfile  python-base.Dockerfile  rust-build-env.Dockerfile
LAS/: docker-compose.yml  run_las.sh
doc/: applications.md  edgeless-function.md  edgeless.md  lambda.md  system-setup.md
scripts/: fix_edgeless_node_conf.sh  run_edgeless_system.sh
src/: apps-utils.sh  apps.sh  edgeless-function.sh  edgeless.sh  lambdas.sh  log.sh  scone.sh  utils.sh
sysinfo/: Cargo.toml
sysinfo/src/: lib.rs
sysinfo_untrusted/: run_sysinfo_test_in_tee_with_workaround.sh  run_sysinfo_test_in_tee_without_workaround.sh
sysinfo_untrusted/sysinfo_server/: Cargo.toml
sysinfo_untrusted/sysinfo_server/src/: main.rs
sysinfo_untrusted/sysinfo_test/: Cargo.toml
templates/cpp/: CMakeLists.txt  lambda_function.cpp  lambda_function.hpp  main.cpp
templates/python/: lambda_function.py  main.py  requirements.txt
templates/rust/: Cargo.toml
test/: run_tests.sh
test/apps/: depix.sh  edgeless_function_python.sh  edgeless_function_rust.sh  edgeless_node.sh  steganography.sh
test/edgeless_tests/: timer.rs
test/lambdas/: cpp.sh  (+2 more)
(+9 files in other folders)
